add crawl service

--- a/.env
+++ b/.env
@@ -23,5 +23,9 @@ APP_SECRET=dee2ff307ee91f1d10715fb59efa55aa
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=amqp://admin:admin@rabbitmq:5672
 ###< symfony/messenger ###
+
+NEWS_ORG_API_KEY=67dd4700b50041129866375338f4b1ec
+NEWS_ORG_URL=https://newsapi.org/v2/
+NEWS_ORG_COUNTRY=us
