update messanger config

--- a/.env
+++ b/.env
@@ -21,11 +21,16 @@ APP_SECRET=dee2ff307ee91f1d10715fb59efa55aa
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=amqp://admin:admin@rabbitmq:5672
+MESSENGER_TRANSPORT_DSN=amqp://admin:admin@rabbitmq:5672/%2f/messages
 ###< symfony/messenger ###
 
 NEWS_ORG_API_KEY=67dd4700b50041129866375338f4b1ec
 NEWS_ORG_URL=https://newsapi.org/v2/
 NEWS_ORG_COUNTRY=us
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://news:newspw@db:3306/news?serverVersion=8"
+###< doctrine/doctrine-bundle ###
