--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
+        "doctrine/doctrine-bundle": "^2.8",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.14",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -67,6 +71,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
+        "symfony/maker-bundle": "^1.43",
         "symfony/phpunit-bridge": "^6.2"
     }
 }
