update functional test

--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,5 @@ APP_SECRET='$ecretf0rt3st'
 ###> enqueue/enqueue-bundle ###
 AMQP_DSN=null:
 ###< enqueue/enqueue-bundle ###
+
+DATABASE_URL="mysql://root:rootpw@db:3306/news?serverVersion=8"
