--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 
-###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
 ###< symfony/phpunit-bridge ###
+/.mysql-data/db/
+/.idea/
