--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/http-client": "5.4.*",
         "symfony/messenger": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "config": {
@@ -54,7 +55,9 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "php bin/console doctrine:migrations:migrate --no-interaction",
+            "php bin/console doctrine:fixtures:load --group=users --no-interaction"
         ],
         "post-update-cmd": [
             "@auto-scripts"
@@ -70,6 +73,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9",
         "symfony/maker-bundle": "^1.43",
         "symfony/phpunit-bridge": "^6.2"
