add user interfaces

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 APP_SECRET=dee2ff307ee91f1d10715fb59efa55aa
 ###< symfony/framework-bundle ###
 
