--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
-    server_name news_service;
-    root /srv/public;
+    server_name news-app;
+    root /var/www/symfony/public;
 
     location / {
         # try to serve file directly, fallback to app.php
