--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_DEBUG=true
+APP_ENV=prod
+APP_DEBUG=flase
 APP_SECRET=dee2ff307ee91f1d10715fb59efa55aa
 ###< symfony/framework-bundle ###
 
